Changes for 3.4.0alpha2

New features:

Bug fixes:
...G...PS. [ZBX-12195] fixed contamination of script output with Zabbix'es own log messages when logging level is set to 4 or 5 and LogType=console (gleb)
...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
........S. [ZBX-12357] fixed missing user macro substitution in expression of newly added triggers (vso)

--------------------------------------------------------------------------------
Changes for 3.4.0alpha1

New features:
A.F.I..... [ZBXNEXT-2102] added support of multiple dashboards; implemented API for dashboards (pavels, maximt, miks, Sasha, vmurzins)
..F..J.... [ZBXNEXT-1223] implemented jmx discovery item (vjaceslavs)
A.F.....S. [ZBXNEXT-2442] implemented parallel alert processing (gcalenko, wiper)
A.F.....S. [ZBXNEXT-3863] added jsonpath based item pre-processing option (Ivo, wiper)
A.F.....S. [ZBXNEXT-3864] added xmlpath based item pre-processing option (Ivo, wiper)
...G...... [ZBXNEXT-3930] improved log monitoring by adjusting formula to process 10 times more new lines than set in MaxLinesPerSecond (vso)
A.F..J.PS. [ZBXNEXT-1274] added support of configurable jmx endpoint url for jmx items (gcalenko, Ivo, Sasha, vso)
........S. [ZBXNEXT-3872] implemented new internal item 'zabbix[host,discovery,interfaces]' (Andris)
A.F....... [ZBXNEXT-3869] implemented map lines (vjaceslavs)
A.F.I..PS. [ZBXNEXT-1675] added support for user macros and time unit suffixes in various time-related settings: update intervals, timeouts, housekeeping settings, time periods, etc. (gleb, Ivo, Sasha, vjaceslavs)
..F....... [ZBXNEXT-3762] added browser warning for IE 9 and IE10 (gcalenko)
..F....... [ZBXNEXT-3870] implemented ability to drag multiple selected items in map editor (gcalenko)
.......PS. [ZBXNEXT-3655] reduced self monitoring cache locking in trappers and manager processes (wiper)